added axios request to grab plant after clicking search, added error message if plant not found, added router in App.jsx for single plant page

--- a/leafy-client/src/assets/css/myplants.css
+++ b/leafy-client/src/assets/css/myplants.css
@@ -41,8 +41,13 @@
 
 /* Search Bar */
 #searchbar {
-    transform: translate(0%, 250%);
+    transform: translate(0%, 100%);
     display: none;
+    flex-direction: column;
+}
+
+#searchbar p {
+    margin-bottom: 20px;
 }
 
 /* My plants page */
