--- a/leafy-client/src/assets/css/plantpage.css
+++ b/leafy-client/src/assets/css/plantpage.css
@@ -1,4 +1,4 @@
-#arrow {
+#back-arrow {
     transform: translate(100%, 80%);
     color: rgb(17,136,60);
 }
@@ -10,16 +10,48 @@
     transform: translate(30%, 10%);
 }
 
+.name-container {
+    transform: translate(3%, 60%);
+}
+
 .plant-name {
     color: rgb(17,136,60);
     font-size: 12px;
+    text-align: center;
 }
+
+.plant-title {
+    text-align: center;
+    font-size: 28px;
+    font-weight: bolder;
+}
+
+.plant-info {
+    transform: translate(3%, 20%);
+}
+
 
 .subheading {
     color: rgb(17,136,60);
-    text-align: left;  
+    text-align: center;
+    margin: 10px;
 }
 
 .description {
-    text-align: right;
+    text-align: center;
+    font-size: 12px;
+    width: 60%;
+    transform: translate(35%, -10%);
+}
+
+#add-remove-button {
+    background-color: rgb(17,136,60, 0.5);
+    color: white;
+    font-family: 'Space Mono', monospace;
+    font-weight: bolder;
+    position: fixed;
+    left: 50%;
+    bottom: 20px;
+    transform: translate(-45%, -50%);
+    margin: 0 auto;
 }
