--- a/leafy-client/src/assets/css/myplants.css
+++ b/leafy-client/src/assets/css/myplants.css
@@ -84,7 +84,7 @@
 
 .bottom-left {
     position: absolute;
-    color: white;
+    color: black;
     bottom: 2px;
     left: 10px;
     font-size: 11px;
@@ -117,7 +117,6 @@
     }
     .bottom-left {
         position: absolute;
-        color: white;
         bottom: 2px;
         left: 10px;
         font-size: 17px;
