--- a/leafy-client/src/assets/css/myplants.css
+++ b/leafy-client/src/assets/css/myplants.css
@@ -17,7 +17,7 @@
     position: absolute;
     background-color: black;
     z-index: 1;
-    height: 100%;
+    height: 100vh;
     width: 28%;
     display: none;
 }
